2014-06-25  Tobias Burnus  <burnus@net-b.de>

	* resolve.c (resolve_ordinary_assign): Don't invoke caf_send
	when assigning a coindexed RHS scalar to a noncoindexed LHS
	array.
	* trans-intrinsic.c (conv_caf_send): Do numeric type conversion
	for a noncoindexed scalar RHS.

2014-06-25  Tobias Burnus  <burnus@net-b.de>

	* check.c (check_co_minmaxsum): Add definable check.
	* expr.c (gfc_check_vardef_context): Fix context == NULL case.
	* trans-expr.c (get_scalar_to_descriptor_type): Handle pointer
	arguments.
	* trans-intrinsic.c (gfc_conv_intrinsic_caf_get): Fix generation of
	temporary strings.

2014-06-25  Jakub Jelinek  <jakub@redhat.com>

	* trans.h (gfc_omp_clause_linear_ctor): New prototype.
	* trans-openmp.c (gfc_omp_linear_clause_add_loop,
	gfc_omp_clause_linear_ctor): New functions.
	(gfc_trans_omp_clauses): Make sure OMP_CLAUSE_LINEAR_STEP has
	correct type.  Set OMP_CLAUSE_LINEAR_ARRAY flag if needed.
	* f95-lang.c (LANG_HOOKS_OMP_CLAUSE_LINEAR_CTOR): Redefine.

2014-06-24  Jakub Jelinek  <jakub@redhat.com>

	* dump-parse-tree.c (show_omp_namelist): Use n->udr->udr instead
	of n->udr.
	* f95-lang.c (gfc_init_builtin_functions): Initialize
	BUILT_IN_ASSUME_ALIGNED.
	* gfortran.h (gfc_omp_namelist): Change udr field type to
	struct gfc_omp_namelist_udr.
	(gfc_omp_namelist_udr): New type.
	(gfc_get_omp_namelist_udr): Define.
	(gfc_resolve_code): New prototype.
	* match.c (gfc_free_omp_namelist): Free name->udr.
	* module.c (intrinsics): Add INTRINSIC_USER.
	(fix_mio_expr): Likewise.
	(mio_expr): Handle INSTRINSIC_USER and non-resolved EXPR_FUNCTION.
	* openmp.c (gfc_match_omp_clauses): Adjust initialization of n->udr.
	(gfc_match_omp_declare_reduction): Treat len=: the same as len=*.
	Set attr.flavor on omp_{out,in,priv,orig} artificial variables.
	(struct resolve_omp_udr_callback_data): New type.
	(resolve_omp_udr_callback, resolve_omp_udr_callback2,
	resolve_omp_udr_clause): New functions.